# microwave-remote-sensing

./: .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  01_eo-discover-eodag.ipynb  01_eo-discover-eodag.yml  Dockerfile  JupyterHub_guide.qmd  Makefile  README.md  README_all_included.qmd  _quarto.yml  docker-compose.yml  environment-dev.yml  environment.yml  index.html  index.qmd  intake-catalog.yml  microwave-remote-sensing.yml  mrs-env.yml  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/actions/build-quarto/: action.yaml
.github/workflows/: publish-quarto.yaml  repo2docker.yaml
.setup/: Makefile  README.md
assets/: 06_color_mapping.json
setup/: Makefile
site_libs/bootstrap/: bootstrap.min.css
src/mrs/: catalog.py  notebook6.py  plot.py  processing.py
team_work/: teamwork_data_guide.ipynb
unit_01/: 01_discover-and-read _exercise.html  01_discover-and-read _exercise.ipynb  01_discover-and-read.html  01_discover-and-read.ipynb  01_discover-and-read.yml  01_discover-and-read_exercise.ipynb  01_homework_exercise.html  01_homework_exercise.ipynb  01_in_class_exercise.html  01_in_class_exercise.ipynb  02_homework_exercise.html  02_homework_exercise.ipynb  02_in_class_exercise.html  02_in_class_exercise.ipynb  02_unit-conversions.html  02_unit-conversions.ipynb  02_unit-conversions.yml  02_unit-conversions_exercise.html  02_unit-conversions_exercise.ipynb  03_backscatter-coefficients.html  03_backscatter-coefficients.ipynb  03_backscatter-coefficients.yml  03_backscatter-coefficients_exercise.html  03_backscatter-coefficients_exercise.ipynb  03_backscatter-coefficients_solution.html  03_homework_exercise.html  03_homework_exercise.ipynb  03_in_class_exercise.html  03_in_class_exercise.ipynb
unit_02/: 04_homework_exercise.html  04_homework_exercise.ipynb  04_in_class_exercise.html  04_in_class_exercise.ipynb  04_l-band-sar.html  04_l-band-sar.ipynb  04_l-band-sar.yml  04_l-band-sar_exercise.ipynb  05_c-and-l-band-comparison.html  05_c-and-l-band-comparison.ipynb  05_c-and-l-band-comparison.yml  05_c-and-l-band-comparison_exercise.ipynb  05_homework_exercise.html  05_homework_exercise.ipynb  05_in_class_exercise.html  05_in_class_exercise.ipynb  06_backscatter-variability.ipynb  06_backscatter-variability.yml  06_backscatter-variability_exercise.ipynb  06_homework_exercise.html  06_homework_exercise.ipynb  06_in_class_exercise.html  06_in_class_exercise.ipynb
unit_03/: 07_amplitude-and-phase.html  07_amplitude-and-phase.ipynb  07_amplitude-and-phase.yml  07_amplitude-and-phase_exercise.ipynb  07_homework_exercise.html  07_homework_exercise.ipynb  07_in_class_exercise.html  07_in_class_exercise.ipynb  08_homework_exercise.ipynb  08_in_class_exercise.html  08_in_class_exercise.ipynb  08_speckle-statistics _exercise.ipynb  08_speckle-statistics.ipynb  08_speckle-statistics.yml  09_homework_exercise.html  09_homework_exercise.ipynb  09_in_class_exercise.html  09_in_class_exercise.ipynb  09_interferograms.yml
