[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "*_homework_exercise.ipynb"
]
line-length = 88
indent-width = 4
target-version = "py313"
# unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]  # Subsets could also be used if that is too much
ignore = [
    "ANN",
    # "ANN401", # any-type (in func args)
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line (opposite to D212)
    "PGH",    # pygrep hooks are ignored
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "T201",   # print (should not be used)
    "COM812", # missing-trailing-comma
    "EXE002", # shebang-missing-executable-file
    "PLR0913", # too-many-arguments
    "D103", # undocumented-public-function

]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # maybe true? Should replace blackdoc
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-third-party = []
