[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
authors = [{ name = "Remote Sensing Group, TU Wien", email = "rs@tuwien.ac.at" }]
name = "mrs"
version = "0.1.0"
description = "Notebooks for the TU Wien MSc course Microwave Remote Sensing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "bokeh",
    "cmcrameri",
    "dask",
    "datashader",
    "folium",
    "graphviz",
    "holoviews",
    "huggingface_hub",
    "hvplot",
    "intake",
    "intake-xarray",
    "jupyter",
    "jupyter_bokeh",
    "matplotlib",
    "numpy",
    "odc-stac",
    "pyproj",
    "pystac-client",
    "requests",
    "rioxarray",
    "scikit-image",
    "scipy",
    "seaborn",
    "snaphu",
    "xarray",
    "zarr<3.0",
    "python-gitlab",
    "pydantic>=2.12.2",
    "pydantic-extra-types>=2.10.6",
    "pandas-stubs>=2.3.2.250926",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "*_homework_exercise.ipynb"
]
line-length = 88
indent-width = 4
target-version = "py313"
# unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line (opposite to D212)
    "PGH",    # pygrep hooks are ignored
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "T201",   # print (should not be used)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # maybe true? Should replace blackdoc
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-third-party = []
